# raise-summit-hackathon-2026

./: .env.example  .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  Makefile  README.md
apps/api/: README.md  cyclesentinel.db  pyproject.toml
apps/api/src/cyclesentinel/: __init__.py  config.py  enums.py  events.py  main.py  schemas.py
apps/api/src/cyclesentinel/agent/: __init__.py  branch.py  brief.py  jsonio.py  limits.py  loop.py  planner.py  prompts.py  state.py
apps/api/src/cyclesentinel/api/: __init__.py  briefs.py  bus.py  demo.py  deps.py  health.py  patients.py  runner.py  runs.py
apps/api/src/cyclesentinel/calculators/: __init__.py  _util.py  e2_per_follicle.py  e2_rate.py  next_draw_timing.py  ohss_composite.py  progesterone_for_day.py  response_curve.py
apps/api/src/cyclesentinel/db/: __init__.py  models.py  repo.py  seed.py  session.py
apps/api/src/cyclesentinel/inference/: __init__.py  base.py  cassette.py  live.py  replay.py  stub.py
apps/api/src/cyclesentinel/retrieval/: __init__.py  collections.py  corpus.py  local_store.py  pgvector_store.py  store.py  vultr_store.py
apps/api/tests/: __init__.py  conftest.py
apps/api/tests/agent/: __init__.py  conftest.py  test_branch.py  test_grounding.py  test_limits.py  test_state.py  test_trajectories.py
apps/api/tests/api/: __init__.py  conftest.py  scripted.py  sse_util.py  test_endpoints.py  test_sse.py
apps/api/tests/cassettes/: README.md
apps/api/tests/contract/: __init__.py  test_contract_drift.py
apps/api/tests/integration/: __init__.py  test_e2e_api.py
docs/: CONTRACTS.md  PRD.md  (+7 more)
(+154 files in other folders)
