[project]
name = "cyclesentinel"
version = "0.1.0"
description = "MILA — ovarian-stimulation monitoring & escalation agent (RAISE Summit Hackathon 2026)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2",
    "pydantic-settings",
    "sqlalchemy>=2",
    "httpx",
    "python-multipart",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "anyio",
    "mypy",
    "ruff",
    "pillow",
]
live = [
    "psycopg[binary]",
    "pgvector",
    "boto3",
    "pillow",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cyclesentinel"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "N", "SIM", "C4"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: hits the network; excluded by -m 'not live'",
]
testpaths = ["tests"]
pythonpath = ["src"]
